--- a/collease/src/loginInfo/LoginPage.css
+++ b/collease/src/loginInfo/LoginPage.css
@@ -130,7 +130,7 @@ h2 {
 
 /* Animate on Hover */
 .login-button:hover {
-    background-color: #1976D2; /* Solid color change on hover */
+    background-color: #1976D2;
     transform: translateY(-3px);
     box-shadow: 0px 10px 25px rgba(33, 150, 243, 0.6);
 }
